Criação do header no index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>pagina de login</title>
 </head>
 <body>
-    <header></header>
+    <header class="header">
+
+        <h1> class="title-header">Pagina login</h1>
+    </header>
     <section></section>
     <footer></footer>
 </body>
