--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina de login</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header class="header">
 
-        <h1> class="title-header">Pagina login</h1>
+        <h1 class="title-header">Pagina login</h1>
     </header>
     <section></section>
     <footer></footer>
