--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h1 class="title-header">Pagina login</h1>
     </header>
     <section></section>
-    <footer></footer>
+    <footer class="footer">
+        <p>&copy; 2023 - todos os direitos reservados.</p>
+
+    </footer>
 </body>
 </html>
